samples/_failures_safe/1761223009_1d4cff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93bf7935.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_93bf7935.c:155:5: error: expected expression at end of input
  155 |     switch (state)
      |     ^~~~~~
./samples/SAFE/__tmp_93bf7935.c:155:5: error: expected declaration or statement at end of input
